<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg"
    android:layout_margin="5dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/buses" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Company Name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/park"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/park"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="Route"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/tel"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="Fee"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="11sp" />

    </LinearLayout>

</LinearLayout>